<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:paddingLeft="@dimen/h_15"
        android:paddingRight="@dimen/h_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_17"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/main_search" />

            <ImageView
                android:id="@+id/img_welfare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/h_20"
                android:layout_toLeftOf="@id/img_search"
                android:src="@drawable/main_welfare" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:paddingLeft="@dimen/h_15"
            android:paddingRight="@dimen/h_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



          <RelativeLayout
              android:id="@+id/rl_banner"
              android:layout_gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="120dp">
              <android.support.v4.view.ViewPager
                  android:id="@+id/banner"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" />
              <org.linyi.ui.magicindicator.MagicIndicator
                  android:id="@+id/magic_indicator1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/h_15"
                  android:layout_marginBottom="@dimen/h_15"
                  android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"/>
          </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/h_12">

                <TextView
                    android:id="@+id/tv_classify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/stack_classify"
                    android:gravity="center_horizontal"
                    android:text="@string/classify"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/stack_rank"
                    android:gravity="center_horizontal"
                    android:text="@string/ranking"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/stack_find"
                    android:gravity="center_horizontal"
                    android:text="@string/find"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <View
                style="@style/line2"
                android:layout_marginTop="@dimen/h_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h_12"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingLeft="@dimen/h_15"
                android:paddingRight="@dimen/h_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boy_recommend"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_boy_for_another"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/for_another"
                    android:textColor="@color/text_color_orange"
                    android:textSize="@dimen/sp_13" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_boy"
                android:layout_marginLeft="@dimen/h_10"
                android:layout_marginRight="@dimen/h_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h_12"
            android:orientation="vertical">

            <RelativeLayout
                android:paddingLeft="@dimen/h_15"
                android:paddingRight="@dimen/h_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/girl_recommend"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_girl_for_another"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/for_another"
                    android:textColor="@color/text_color_orange"
                    android:textSize="@dimen/sp_13" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_girl"
                android:layout_marginLeft="@dimen/h_10"
                android:layout_marginRight="@dimen/h_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_6" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
</LinearLayout>