<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/h_15"
                android:background="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/history_record"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/tv_all_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="@dimen/h_15"
                android:text="@string/all_select"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:background="@color/line_color2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/ll_bottom"
                android:overScrollMode="never"
                tools:listitem="@android:layout/simple_list_item_2" />

            <LinearLayout
                android:id="@+id/ll_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="@dimen/h_16"
                    android:paddingBottom="@dimen/h_16"
                    android:text="@string/cancel"
                    android:textColor="@color/text_color_gray"
                    android:textSize="@dimen/sp_14" />


                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="@dimen/h_16"
                    android:paddingBottom="@dimen/h_16"
                    android:text="@string/delete"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:background="@color/white"
            android:id="@+id/ll_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="@dimen/h_195"
                android:layout_height="@dimen/h_157"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_106"
                android:background="@drawable/main_shelf_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/h_18"
                android:text="@string/history_record_null"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
