<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:contentInsetStart="0dp"
        app:layout_scrollFlags="scroll|enterAlways">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/h_15"
            android:paddingRight="@dimen/h_10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/h_10"
                android:layout_toLeftOf="@id/tv_cancel"
                android:background="@drawable/search_ed_background_shape">

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/h_36"
                    android:layout_centerVertical="true"
                    android:src="@drawable/search_gray" />

                <EditText
                    android:imeOptions="actionSearch"
                    android:id="@+id/ed_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/h_2"
                    android:layout_marginRight="@dimen/h_5"
                    android:layout_toLeftOf="@id/img_delect"
                    android:layout_toRightOf="@id/img_search"
                    android:background="@null"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textCursorDrawable="@drawable/edit_cursor_shape"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/img_delect"
                    android:layout_width="@dimen/h_15"
                    android:layout_height="@dimen/h_15"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/h_10"
                    android:src="@drawable/search_delect" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/cancel"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/h_12"
            android:paddingRight="@dimen/h_12">

            <RelativeLayout
                android:id="@+id/rl_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_search"
                    android:textColor="@color/text_color_6"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_for_another"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/for_another"
                    android:textColor="@color/text_color_b"
                    android:textSize="@dimen/sp_12" />
                <org.linyi.ui.flowlayout.AutoFlowLayout
                    android:id="@+id/afl_hot"
                    android:layout_below="@id/tv_for_another"
                    android:layout_marginTop="@dimen/h_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_history"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_record"
                    android:textColor="@color/text_color_6"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/img_history_delect"
                    android:layout_width="@dimen/h_15"
                    android:layout_height="@dimen/h_15"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/h_10"
                    android:src="@drawable/search_delect" />
                <org.linyi.ui.flowlayout.AutoFlowLayout
                    android:id="@+id/afl_history"
                    android:layout_below="@id/img_history_delect"
                    android:layout_marginTop="@dimen/h_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <com.scwang.smartrefresh.layout.SmartRefreshLayout
                android:id="@+id/refresh_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srlEnableAutoLoadMore="false"
                app:srlEnableLoadMore="true">

                <com.scwang.smartrefresh.layout.header.ClassicsHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srlClassicsSpinnerStyle="FixedBehind"
                    app:srlDrawableArrowSize="20dp"
                    app:srlDrawableMarginRight="20dp"
                    app:srlDrawableProgress="@drawable/main_tab_shelf_normal"
                    app:srlDrawableProgressSize="20dp"
                    app:srlEnableLastTime="true"
                    app:srlFinishDuration="500"
                    app:srlTextSizeTime="10dp"
                    app:srlTextSizeTitle="16sp"
                    app:srlTextTimeMarginTop="2dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/line_color2"
                    android:overScrollMode="never"
                    tools:listitem="@android:layout/simple_list_item_2"/>

                <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
        </LinearLayout>

        <org.linyi.base.ui.weidgt.TempView
            android:id="@+id/tempView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>


</LinearLayout>
